<resources>
    <string name="app_name">APCS觀念練習</string>
    <string name="practice">練習</string>
    <string name="history">歷史紀錄</string>
    <string name="setting">設定</string>
    <string name="next">下一題</string>
    <string name="last">上一題</string>
    <string name="finish">結束</string>
    <string name="num_of_correct_answer">正確題數</string>
    <string name="number">10</string>
    <string name="text_size">字型大小:</string>
    <string name="dark_mode">深色模式:</string>
    <string name="big">大</string>
    <string name="mid">中</string>
    <string name="small">小</string>
    <string name="session_10503">105年3月</string>
    <string name="session_10510">105年10月</string>
    <string name="session_10603">106年3月</string>
    <string name="choice_a">A</string>
    <string name="choice_b">B</string>
    <string name="choice_c">C</string>
    <string name="choice_d">D</string>
    <string name="a">A.\t</string>
    <string name="b">B.\t</string>
    <string name="c">C.\t</string>
    <string name="d">D.\t</string>
    <string-array name="stem_10503">
        <item>下方程式正確的輸出應該如下：\n\t\t\t\t\t*\n\t\t\t\t***\n\t\t\t*****\n\t\t*******\n\t*********\n在不修改下方程式之第4行及第7行程式碼的前提下，最少需修改幾行程式碼以得到正確輸出？ \n\n1\t\tint k = 4;\n2\t\tint m = 1;\n3\t\tfor (int i=1; i&lt;=5; i=i+1) {\n4\t\t\t\t\t\tfor (int j=1; j&lt;=k; j=j+1) {\n5\t\t\t\t\t\t\t\t\t\tprintf (\" \");\n6\t\t\t\t\t\t}\n7\t\t\t\t\t\tfor (int j=1; j&lt;m; j=j+1) {\n8\t\t\t\t\t\t\t\t\t\tprintf (\"*\");\n9\t\t\t\t\t\t}\n10\t\t\t\t\tprintf (\"\\n\");\n11\t\t\t\t\tk = k – 1;\n12\t\t\t\t\tm = m + 1;\n13\t}      </item>
        <item>給定一陣列a[10]={ 1, 3, 9, 2, 5, 8, 4, 9, 6, 7 }，i.e., a[0]=1,a[1]=3, …, a[8]=6, a[9]=7，以f(a, 10)呼叫執行下方函式後，回傳值為何？ \n\nint f (int a[ ], int n) {\n\t\t\t\tint index = 0;\n\t\t\t\tfor (int i=1; i&lt;n-1; i=i+1) {\n\t\t\t\t\t\t\t\tif (a[i] >= a[index]) {\n\t\t\t\t\t\t\t\t\t\t\t\tindex = i;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t}\n\t\t\t\treturn index;\n}     </item>
        <item>給定一整數陣列a[0]、a[1]、…、a[99]且a[k]=3k+1，以value=100呼叫以下兩函式，假設函式f1及f2之while迴圈主體分別執行n1與n2次 (i.e, 計算if敘述執行次數，不包含 else if敘述)，請問n1與n2之值為何?\n註： (low + high)/2 只取整數部分。   \n\nint f1(int a[ ], int value) {\nint r_value = -1;\n\t\t\t\tint i = 0;\n\t\t\t\twhile (i &lt; 100) {\n\t\t\t\t\t\t\t\tif (a[i] == value) {\n\t\t\t\t\t\t\t\t\t\t\t\tr_value = i;\n\t\t\t\t\t\t\t\t\t\t\t\tbreak;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\ti = i + 1;\n\t\t\t\t}\n\t\t\t\treturn r_value;\n}\n\nint f2(int a[ ], int value) {\n\t\t\t\tint r_value = -1;\n\t\t\t\tint low = 0, high = 99;\n\t\t\t\tint mid;\n\t\t\t\twhile (low &lt; high) {\n\t\t\t\t\t\t\t\tmid = (low + high)/2;\n\t\t\t\t\t\t\t\tif (a[mid] == value) {\n\t\t\t\t\t\t\t\t\t\t\t\tr_value = mid;\n\t\t\t\t\t\t\t\t\t\t\t\tbreak;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\telse if (a[mid] &lt; value) {\n\t\t\t\t\t\t\t\t\t\t\t\tlow = mid + 1;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\telse {\n\t\t\t\t\t\t\t\t\t\t\t\thigh = mid - 1;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t}\n\t\t\t\treturn r_value;\n}       </item>
        <item>經過運算後，下方程式的輸出為何？     \n\nfor (i=1; i=100; i=i+1) {\n\t\t\t\tb[i] = i;\n}\na[0] = 0;\nfor (i=1; i&lt;100; i=i+1) {\n\t\t\t\ta[i] = b[i] + a[i-1];\n}\nprintf (\"%d\\n\", a[50]-a[30]);       </item>
        <item>函數f定義如下，如果呼叫f(1000)，指令sum=sum+i被執行的次數最接近下列何者？    \n\nint f (int n) {\n\t\t\t\tint sum=0;\n\t\t\t\tif (n &lt; 2) {\n\t\t\t\t\t\t\t\treturn 0;\n\t\t\t\t}\n\t\t\t\tfor (int i=1; i&lt;n; i=i+1) {\n\t\t\t\t\t\t\t\tsum = sum + i;\n\t\t\t\t}\n\t\t\t\tsum = sum + f(2*n/3);\n\t\t\t\treturn sum;\n}        </item>
        <item>(記得改!!!)List是一個陣列，裡面的元素是element，它的定義如右。List中的每一個element利用next這個整數變數來記錄下一個element在陣列中的位置，如果沒有下一個element，next就會記錄-1。所有的element串成了一個串列(linked list)。例如在list中有三筆資料   \n\nstruct element {\n\t\t\t\tchar data;\n\t\t\t\tint next;\n}\nvoid RemoveNextElement (element list[ ], int current) {\n\t\t\t\tif (list[current].next != -1) {\n\t\t\t\t\t\t\t\t/*移除current的下一個element*/\n\t\t\t\t\t\t\t\t________________\n\t\t\t\t\t\t\t\t________________\n\t\t\t\t\t\t\t\t________________\n\t\t\t\t}\n}       </item>
        <item>請問以a(13,15)呼叫下方a()函式，函式執行完後其回傳值為何？   \n\nint a(int n, int m) {\n\t\t\t\tif (n &lt; 10) {\n\t\t\t\t\t\t\t\tif (m &lt; 10) {\n\t\t\t\t\t\t\t\t\t\t\t\treturn n + m ;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\telse {\n\t\t\t\t\t\t\t\t\t\t\t\treturn a(n, m-2) + m ;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\treturn a(n-1, m) + n ;\n\t\t\t\t}\n}    </item>
        <item>一個費式數列定義第一個數為0第二個數為1之後的每個數都等於前兩個數相加，如下所示:0、1、1、2、3、5、8、13、21、34、55、89…。右列的程式用以計算第N個(N≥2)費式數列的數值，請問 (a) 與 (b) 兩個空格的敘述(statement)應該為何？     \n\nint a=0;\nint b=1;\nint i, temp, N;\n…\nfor (i=2; i&lt;N; i=i+1) {\n\t\t\t\ttemp = b;\n\t\t\t\t(a)   ;\n\t\t\t\ta = temp;\n\t\t\t\tprintf (\"%d\\n\",  (b)  );\n}      </item>
        <item>請問下方程式輸出為何？      \n\nint A[5], B[5], i, c;\n…\nfor (i=1; i&lt;4; i=i+1) {\n\t\t\t\tA[i] = 2 + i*4;\n\t\t\t\tB[i] = i*5;\n}\nc = 0;\nfor (i=1; i&lt;4; i=i+1) {\n\t\t\t\tif (B[i] > A[i]) {\n\t\t\t\t\t\t\t\tc = c + (B[i] % A[i]);\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\tc = 1;\n\t\t\t\t}\n}\nprintf (\"%d\\n\", c);         </item>
        <item>給定下方 g() 函式，g(13) 回傳值為何？     \n\nint g(int a) {\n\t\t\t\tif (a > 1) {\n\t\t\t\t\t\t\t\treturn g(a - 2) + 3;\n\t\t\t\t}\n\t\t\t\treturn a;\n}         </item>
        <item>定義 a[n] 為一陣列 (array)，陣列元素的指標為0至n-1。若要將陣列中a[0]的元素移到a[n-1]，下方程式片段空白處該填入何運算式？   \n\nint i, hold, n;\n…\nfor (i=0; i&lt;   ; i=i+1) {\n\t\t\t\thold = a[i]; \n\t\t\t\ta[i] = a[i+1];\n\t\t\t\ta[i+1] = hold;\n}      </item>
        <item>給定下方函式 f1() 及 f2()。f1(1)運算過程中，以下敘述何者為錯？      \n\nvoid f1 (int m) {\n\t\t\t\tif (m > 3) {\n\t\t\t\t\t\t\t\tprintf (\"%d\\n\", m);\n\t\t\t\t\t\t\t\treturn;\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\tprintf (\"%d\\n\", m);\n\t\t\t\t\t\t\t\tf2(m+2);\n\t\t\t\t\t\t\t\tprintf (\"%d\\n\", m);\n\t\t\t\t}\n}\nvoid f2 (int n) {\n\t\t\t\tif (n > 3) {\n\t\t\t\t\t\t\t\tprintf (\"%d\\n\", n);\n\t\t\t\t\t\t\t\treturn;\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\tprintf (\"%d\\n\", n);\n\t\t\t\t\t\t\t\tf1(n-1);\n\t\t\t\t\t\t\t\tprintf (\"%d\\n\", n);\n\t\t\t\t}\n}      </item>
        <item>下方程式片段擬以輾轉除法求 i 與 j 的最大公因數。請問while迴圈內容何者正確？      \n\ni = 76;\nj = 48;\nwhile ((i % j) != 0) {\n\t\t\t\t________________\n\t\t\t\t________________\n\t\t\t\t________________\n}\nprintf (\"%d\\n\", j);      </item>
        <item>下方程式輸出為何？    \n\nvoid foo (int i) {\n\t\t\t\tif (i &lt; 5) {\n\t\t\t\t\t\t\t\tprintf (\"foo: %d\\n\", i);\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\tbar(i - 10);\n\t\t\t\t}\n}\nvoid bar (int i) {\n\t\t\t\tif (i &lt; 10) {\n\t\t\t\t\t\t\t\tprintf (\"bar: %d\\n\", i);\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\tfoo(i - 5);\n\t\t\t\t}\n}\nvoid main() {\n\t\t\t\tfoo(15106);\n\t\t\t\tbar(3091);\n\t\t\t\tfoo(6693);\n}       </item>
        <item>若以f(22)呼叫下方f()函式，總共會印出多少數字？      \n\nvoid f(int n) {\n\t\t\t\tprintf (\"%d\\n\", n);\n\t\t\t\twhile (n != 1) {\n\t\t\t\t\t\t\t\tif ((n%2)==1) {\n\t\t\t\t\t\t\t\t\t\t\t\tn = 3*n + 1;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\telse {\n\t\t\t\t\t\t\t\t\t\t\t\tn = n / 2;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\tprintf (\"%d\\n\", n);\n\t\t\t\t}\n}      </item>
        <item>下方程式執行過後所輸出數值為何？     \n\nvoid main () {\n\t\t\t\tint count = 10;\n\t\t\t\tif (count > 0) {\n\t\t\t\t\t\t\t\tcount = 11;\n\t\t\t\t}\n\t\t\t\tif (count > 10) {\n\t\t\t\t\t\t\t\tcount = 12;\n\t\t\t\t\t\t\t\tif (count % 3 == 4) {\n\t\t\t\t\t\t\t\t\t\t\t\tcount = 1;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\telse {\n\t\t\t\t\t\t\t\t\t\t\t\tcount = 0;\n\t\t\t\t\t\t\t\t}\n\t\t\t\t}\n\t\t\t\telse if (count > 11) {\n\t\t\t\t\t\t\t\tcount = 13;\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\tcount = 14;\n\t\t\t\t}\n\t\t\t\tif (count) {\n\t\t\t\t\t\t\t\tcount = 15;\n\t\t\t\t}\n\t\t\t\telse  {\n\t\t\t\t\t\t\t\tcount = 16;\n\t\t\t\t}\n\t\t\t\tprintf (\"%d\\n\", count);\n}        </item>
        <item>下方程式片段主要功能為：輸入六個整數，檢測並印出最後一個數字是否為六個數字中最小的值。然而，這個程式是錯誤的。請問以下哪一組測試資料可以測試出程式有誤？     \n\n#define TRUE 1\n#define FALSE 0\nint d[6], val, allBig;\n…\nfor (int i=1; i&lt;5; i=i+1) {\n\t\t\t\tscanf (\"%d\", &amp;d[i]);\n}\nscanf (\"%d\", &amp;val);\nallBig = TRUE;\nfor (int i=1; i&lt;5; i=i+1) {\nif (d[i] > val) {\n\t\t\t\t\t\t\t\tallBig = TRUE;\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\tallBig = FALSE;\n\t\t\t\t}\n}\nif (allBig == TRUE) {\n\t\t\t\tprintf (\"%d is the smallest.\\n\", val);\n}\nelse {\n\t\t\t\tprintf (\"%d is not the smallest.\\n\", val);\n}\n}       </item>
        <item>程式編譯器可以發現下列哪種錯誤?     \n\n        </item>
        <item>大部分程式語言都是以列為主的方式儲存陣列。在一個8x4的陣列(array) A裡，若每個元素需要兩單位的記憶體大小，且若A[0][0]的記憶體位址為 108 (十進制表示)，則A[1][2]的記憶體位址為何？     \n\n        </item>
        <item>下方為一個計算n階層的函式，請問該如何修改才會得到正確的結果？              \n\n1.\tint fun (int n) {\n2.\t\t\t\t\tint fac = 1;\n3.\t\t\t\t\tif (n >= 0) {\n4.\t\t\t\t\t\t\t\t\tfac = n * fun(n - 1);\n5.\t\t\t\t\t}\n6.\t\t\t\t\treturn fac;\n7.\t}        </item>
        <item>下方程式碼，執行時的輸出為何？      \n\nvoid main() {\n\t\t\t\tfor (int i=0; i&lt;10; i=i+1) {\n\t\t\t\t\t\t\t\tprintf (\"%d \", i);\n\t\t\t\t\t\t\t\ti = i + 1;\n\t\t\t\t}\n\t\t\t\tprintf (\"\\n\");\n}        </item>
        <item>下方f()函式執行後所回傳的值為何？   \n\nint f() {\n\t\t\t\tint p = 2;\n\t\t\t\twhile (p &lt; 2000) {\n\t\t\t\t\t\t\t\tp = 2 * p;\n\t\t\t\t}\n\t\t\t\treturn p;\n}       </item>
        <item>下方f()函式 \"a\", \"b\", \"c\" 處需分別填入哪些數字，方能使得 f(4) 輸出 2468的結果？\n記得改扣 把()換成\"\"     \n\nint f(int n) {\n\t\t\t\tint p = 0;\n\t\t\t\tint i = n;\n\t\t\t\twhile (i >=   \"a\"   ) {\n\t\t\t\t\t\t\t\tp = 10 –   \"b\"   * i;\n\t\t\t\t\t\t\t\tprintf (\"%d\", p);\n\t\t\t\t\t\t\t\ti = i -   \"c\"   ;\n\t\t\t\t}\n}      </item>
        <item>下方g(4)函式呼叫執行後，回傳值為何？\n\nint f (int n)  {\n\t\t\t\tif (n > 3) {\n\t\t\t\t\t\t\t\treturn 1;\n\t\t\t\t}\n\t\t\t\telse if (n == 2) {\n\t\t\t\t\t\t\t\treturn (3 + f(n+1));\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\treturn (1 + f(n+1));\n\t\t\t\t}\n}\nint g(int n) {\n\t\t\t\tint j = 0;\n\t\t\t\tfor (int i=1; i&lt;=n-1; i=i+1) {\n\t\t\t\t\t\t\t\tj = j + f(i);\n\t\t\t\t}\n\t\t\t\treturn j;\n}     \n\nint f (int n)  {\n\t\t\t\tif (n > 3) {\n\t\t\t\t\t\t\t\treturn 1;\n\t\t\t\t}\n\t\t\t\telse if (n == 2) {\n\t\t\t\t\t\t\t\treturn (3 + f(n+1));\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\treturn (1 + f(n+1));\n\t\t\t\t}\n}\nint g(int n) {\n\t\t\t\tint j = 0;\n\t\t\t\tfor (int i=1; i&lt;n-1; i=i+1) {\n\t\t\t\t\t\t\t\tj = j + f(i);\n\t\t\t\t}\n\t\t\t\treturn j;\n}     </item>
        <item>下方Mystery()函式else 部分運算式應為何，才能使得 Mystery(9) 的回傳值為34。\n\nint Mystery (int x) {\n\t\t\t\tif (x &lt;= 1) {\n\t\t\t\t\t\t\t\treturn x;\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\treturn ____________ ;\n\t\t\t\t}\n}    \n\nint Mystery (int x) {\n\t\t\t\tif (x &lt; 1) {\n\t\t\t\t\t\t\t\treturn x;\n\t\t\t\t}\n\t\t\t\telse {\n\t\t\t\t\t\t\t\treturn ____________ ;\n\t\t\t\t}\n}       </item>
    </string-array>
</resources>