<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:id="@+id/layout_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_size"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dark_mode"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_text_size"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_text_size" />

    <RadioGroup
        android:id="@+id/radioGroup_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text_size"
        app:layout_constraintStart_toEndOf="@+id/tv_text_size"
        app:layout_constraintTop_toTopOf="@+id/tv_text_size">

        <RadioButton
            android:id="@+id/btn_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/btn_mid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mid"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/big"
            android:textSize="25sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>